fix vertical alignment of hamburger menu, spacing to brandtext

--- a/src/header/css/header-brand.pcss
+++ b/src/header/css/header-brand.pcss
@@ -18,11 +18,13 @@
 	@media (--width-s) {
 		margin-inline-end: auto;
 		padding-inline: 12px;
+		padding-inline-start: 6px;
 	}
 
 	@media (--width-m) {
 		margin-inline-end: auto;
-		padding-inline: 12px;
+		padding-inline-end: 12px;
+		padding-inline-start: 6px;
 	}
 
 	@media (--width-l) {
@@ -52,13 +54,9 @@
 
 .distributor-image-border {
 	display: inline;
-	border-right: solid 1px #e0e0e0;
+	border-right: solid 1px var(--mono-88);
 	height: 56px;
-	margin-right: 10px;
-
-	@nest :dir(rtl) & {
-			margin: 0px 0px 0px 10px;
-	}
+	margin-inline-end: 10px;
 }
 
 /* Global Header Brand: Text
