--- a/src/header/css/header-menus.pcss
+++ b/src/header/css/header-menus.pcss
@@ -41,6 +41,8 @@
 
 .esri-header-menus-image {
 	@apply --menu-icon-styles;
+	margin-top: 15px;
+	margin-bottom: 17px;
 }
 
 /* Global Header Menus: Content
